(lang dune 2.8)
(name cpr)
(generate_opam_files true)
(source (uri "git+ssh://git@github.com:pkel/cpr.git"))
(homepage "https://github.com/pkel/cpr")
(bug_reports "https://github.com/pkel/cpr/issues")
(license none)
(authors "Patrik Keller")
(maintainers "patrik@pkel.dev")

(package
 (name cpr)
 (synopsis "Simulating various DAG-based proof-of-work consensus protocols")
 (depends
  (angstrom (>= 0.15.0))
  (bos (>= 0.2.1))
  (cmdliner (>= 1.1.1))
  (ezxmlm (>= 1.1.0))
  (ocaml (>= 4.12))
  (parany (>= 12.2))
  (ppx_expect (>= v0.15))
  (ppx_fields_conv (>= v0.15))
  (ppx_let (>= v0.15))
  (ppx_sexp_conv (>= v0.15))
  (ppx_show (>= 0.2.1))
  (ppx_variants_conv (>= v0.15))
  (progress (>= 0.2.1))
  (pvec (> 0))
  (pyml (>= 20220325))
  (pythonlib (>= v0.15))
  ))

(package
 (name cpr-dev)
 (synopsis "Devtools")
 (depends
   (ocamlformat (= 0.22.4))
   (merlin (>= 4.5))
   (odig (>= 0.0.8))
   (odoc (>= 2.1.0))
   (utop (>= 2.9.1))
   ))
