(library
 (name cpr_lib)
 (public_name cpr)
 (libraries angstrom bos ezxmlm ppx_show.runtime pvec)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_show)))

(rule
 (target version.ml)
 (deps
  (env_var CPR_VERSION))
 (action
  (with-stdout-to
   version.ml
   (progn
    (echo "let t = \"")
    (echo %{env:CPR_VERSION=~})
    (echo "\"\n")))))
